# qml-konami

./: CMakeLists.txt  LICENSE  README.md  resources.qrc
src/: main.cpp
src/app/: App.cpp  App.hpp
ui/views/: MainWindow.qml
